welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:7: error: ')' expected but ';' found.
 			(gauche(); avance(9);
                                 ^