welcome.lessons.welcome.loopfor.LoopCourse.scala.code

 	for (i <- 1 to 9) {
 		if (!estFaceMur) {
 			avance(9);
 		};
 		else {
 			(gauche(); avance(9);
 		};
 	}
 		
